# rlm_by_5.3Codex_VSCode

./: .gitignore  1.md  2.md  GEMINI.md  README.md  README.ru.md  messages.md  plan memory-aware.md  pyproject.toml
.agent/: README.md  VERSION
.agent/skills/: ARCHIVIST_SKILL.md  BOOTSTRAP_MEMORY_SKILL.md  CODE_REVIEWER_SKILL.md  ORCHESTRATE_WORKFLOW_SKILL.md  PLANNER_SKILL.md  SAVE_MEMORY_RULE_SKILL.md  SYNTHESIZER_SKILL.md  VALIDATOR_SKILL.md  WORKER_SKILL.md
.agent/workflows/: bootstrap-memory.md  orchestrate.md  save-memory-rule.md
.github/: copilot-instructions.md
.github/agents/: archivist.md  code_reviewer.md  disambiguator.md  planner.md  refactorer.md  reflector.md  synthesizer.md  test_writer.md  validator.md  worker.md
.github/commands/: bootstrap-memory.md  orchestrate.md  save-memory-rule.md
.github/prompts/: bootstrap_memory_from_codebase.prompt.md  orchestrate.prompt.md  orchestrator_skill.prompt.md  save_operational_memory_rule.prompt.md
backups/pre_local_first_20260302/: README.md  restore.ps1
docs/: codebase-to-rlm-memory-workflow.md  context-window-briefing.md  github-bootstrap-install.md  local-first-memory-guide.md  memory-mutation-maintenance-checklist.md
examples/: claude_desktop_mcp_config.json  login_page.html  repl_recursive_workflow.md
memory/canonical/: active_tasks.md  architecture.md  coding_rules.md  communication.md
memory/changelog/: button_color_rule_20260302.md  conflict_resolution_policy_20260302.md  global_server_per_project_memory_20260302.md  llm_trace_visibility_20260302.md  local_iteration_log_overwrite_20260302.md  memory_reset_20260302.md  orchestrate_promptfile_fix_20260302.md  orchestration_comparison_20260302.md  orchestration_diagnostic_mode_20260302.md  rlm_consolidation_20260302_012240.md  rlm_consolidation_20260302_012723.md  rlm_consolidation_20260302_012956.md  rlm_consolidation_20260302_013110.md  rlm_consolidation_20260302_013607.md  rlm_consolidation_20260302_013815.md  rlm_consolidation_20260302_014447.md  rlm_consolidation_20260302_015933.md  rlm_consolidation_20260302_020314.md  rlm_consolidation_20260302_020921.md  rlm_consolidation_20260302_022256.md  (+99 more)
prompts/: prompt1.md  prompt2.md  system_prompt_root.md
scripts/: install_rlm_bootstrap.ps1  seed_canonical_from_rlm_memory.py  write_orchestrator_memory_checklist.py
tests/: smoke_test_integration.py  test_command_runner.py  test_compression_real.py  test_intent_analyzer.py  test_llm_adapter.py  test_mentor_engine.py  test_output_compressor.py  test_powershell_fixer.py  test_venv_resolver.py
(+184 files in other folders)
