[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-memory-mcp"
version = "0.1.0"
description = "MCP server for Hybrid Recursive Memory workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.6.0",
  "httpx>=0.27.0"
]

[project.scripts]
rlm-memory-mcp = "rlm_mcp.server:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
