[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-memory-mcp"
version = "0.1.0"
description = "MCP server for Hybrid Recursive Memory workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.6.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
code-index = [
  "tree-sitter>=0.24",
  "tree-sitter-python",
  "tree-sitter-javascript",
  "tree-sitter-typescript",
  "tree-sitter-css",
  "tree-sitter-go",
  "tree-sitter-rust",
  "tree-sitter-java",
  "tree-sitter-c-sharp",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-ruby",
]

[project.scripts]
rlm-memory-mcp = "rlm_mcp.server:run"
rlm-generate-memory = "rlm_mcp.cli.generate_memory:main"
rlm-seed-canonical = "rlm_mcp.cli.seed_canonical:main"
rlm-validate-orchestrator = "rlm_mcp.cli.validate_orchestrator:main"
rlm-write-checklist = "rlm_mcp.cli.write_checklist:main"
rlm-migrate-legacy-facts = "rlm_mcp.cli.migrate_legacy_facts:main"
rlm-generate-run-id = "rlm_mcp.cli.generate_run_id:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
